--- a/package.json
+++ b/package.json
@@ -21,5 +21,6 @@
   "homepage": "https://github.com/jdmar3-comp426/a00-zizhou1518#readme",
   "dependencies": {
     "browser-sync": "^2.27.5"
-  }
+  },
+  "devDependencies": {}
 }
